packages/obsidian/src/styles.css
body {
	--shiki-code-background: var(--code-background);
	--shiki-code-normal: var(--text-muted);
	--shiki-code-comment: var(--text-faint);
	--shiki-code-function: var(--color-green);
	--shiki-code-important: var(--color-orange);
	--shiki-code-keyword: var(--color-pink);
	--shiki-code-property: var(--color-cyan);
	--shiki-code-punctuation: var(--text-muted);
	--shiki-code-string: var(--color-yellow);
	--shiki-code-value: var(--color-purple);

	/*--shiki-code-border-color: var(--background-modifier-border);*/
	--shiki-code-block-border-color: transparent;
	--shiki-code-block-border-radius: var(--code-radius);
	--shiki-code-block-border-width: 0px; /* this has to have a unit */

	--shiki-code-block-spacing: var(--p-spacing);

	--shiki-highlight-red: rgba(var(--color-red-rgb), 0.5);
	--shiki-highlight-green: rgba(var(--color-green-rgb), 0.5);
	--shiki-highlight-neutral: var(--shiki-code-normal);
	--shiki-highlight-red-background: rgba(var(--color-red-rgb), 0.1);
	--shiki-highlight-green-background: rgba(var(--color-green-rgb), 0.1);
	--shiki-highlight-neutral-background: rgba(var(--mono-rgb-100), 0.05);

	--shiki-terminal-dots-color: var(--text-faint);

	--shiki-tooltip-background: var(--background-modifier-message);
	--shiki-tooltip-text-color: #fafafa;

	--shiki-gutter-border-color: var(--background-modifier-border);
	--shiki-gutter-border-width: var(--border-width);
	--shiki-gutter-text-color: var(--text-faint);
	--shiki-gutter-text-color-highlight: var(--shiki-code-normal);

	--shiki-active-tab-border-width: 2px;
	--shiki-active-tab-border-color: var(--shiki-highlight-neutral);
}

.edit-block-button {
	pointer-events: all;

	& > svg {
		pointer-events: all;
	}
}

/* Disable ligatures in code blocks, as they can cause incorrect highlighting */
div.expressive-code {
	font-variant-ligatures: no-contextual;

	& > figure > pre {
		/* Fix for shimmering focus */
		margin: 0 !important;
	}

	& > figure.frame {
		&.has-title > figcaption.header::before {
			pointer-events: all !important;
		}

		& > figcaption.header {
			z-index: unset;
		}

		& > div.copy {
			/* Move the copy button to the bottom right */
			inset-block-end: calc(var(--ec-brdWd) + var(--ec-uiPadInl) / 2);
		}
	}
}

.markdown-preview-view {
	div.expressive-code {
		margin-block: var(--shiki-code-block-spacing);
	}
}

/* Hide the frontmatter code block in reading view again */
div.markdown-preview-view > div > div.mod-header + div > div.block-language-yaml.shiki-hide-in-reading-mode {
	display: none;
}

span.shiki-bold {
	font-weight: var(--bold-weight, 600);
}
span.shiki-italic {
	font-style: italic;
}
span.shiki-ul {
	text-decoration: underline;
}

.cm-content .shiki-editing-codeblock-line {
	box-sizing: border-box;
	display: block;
	font-variant-ligatures: no-contextual;
	background-color: var(--shiki-code-background);
	border-inline: var(--shiki-code-block-border-width) solid var(--shiki-code-block-border-color);
	padding-inline: 0.85em;
	width: 100%;
	max-width: 100%;
	overflow-y: hidden;
	contain: paint;
	touch-action: pan-y;
	overscroll-behavior-x: contain;
	-webkit-overflow-scrolling: touch;
	scrollbar-width: none;
}

.cm-content .shiki-editing-codeblock-line::-webkit-scrollbar {
	display: none;
}

.cm-content .shiki-editing-codeblock-first-line {
	border-start-start-radius: var(--shiki-code-block-border-radius);
	border-start-end-radius: var(--shiki-code-block-border-radius);
	border-block-start: var(--shiki-code-block-border-width) solid var(--shiki-code-block-border-color);
	padding-block-start: 0.65em;
}

.cm-content .shiki-editing-codeblock-last-line {
	border-end-start-radius: var(--shiki-code-block-border-radius);
	border-end-end-radius: var(--shiki-code-block-border-radius);
	border-block-end: var(--shiki-code-block-border-width) solid var(--shiki-code-block-border-color);
	padding-block-end: 0.65em;
}

.cm-content .shiki-editing-codeblock-nowrap {
	white-space: pre;
	overflow-x: auto;
}

.cm-content .shiki-editing-codeblock-nowrap::after {
	display: inline-block;
	width: var(--shiki-editing-scroll-spacer, 0px);
	content: '';
}

.cm-content .shiki-editing-codeblock-wrap {
	white-space: pre-wrap;
	overflow-x: hidden;
	overflow-wrap: anywhere;
}

.cm-content .shiki-editing-token {
	font-variant-ligatures: no-contextual;
}

.cm-content .shiki-editing-line-number {
	box-sizing: border-box;
	display: inline-block;
	min-width: 2.75em;
	margin-inline-end: 1em;
	padding-inline-end: 0.85em;
	color: var(--shiki-gutter-text-color);
	text-align: end;
	user-select: none;
	border-inline-end: var(--shiki-gutter-border-width) solid var(--shiki-gutter-border-color);
}

/* Settings tab  */
.setting-item-control input.shiki-custom-theme-folder {
	min-width: 250px;
}

